Require Java 17 or up to parse and generate